# langgraph_langchain

./: .gitignore  1-AgenticRAG (1).ipynb  1-agenticrag.ipynb  1-dense-sparse.ipynb  1-densesparse.ipynb  1-query-expansion.ipynb  1-semantichunking.ipynb  1-simplegraph_1.ipynb  1-streaming.ipynb  2-ReAct (1).ipynb  2-ReAct.ipynb  2-chatbot.ipynb  2-faiss.ipynb  2-querydecomposition.ipynb  2-reranking.ipynb  3-COTRag.ipynb  3-DataclassStateSchema.ipynb  3-HyDE.ipynb  3-mmr.ipynb  3-other-vectorstores.ipynb  4-Selfreflection.ipynb  4-pydantic.ipynb  5-QueryPlanningdecomposition.ipynb  5-chains-langgraph.ipynb  6-Iterativeretrieval.ipynb  6-chatbotswithmultipletools.ipynb  7-answersynthesis.ipynb  7-react-agents.ipynb  COMPLETE_QA_GUIDE.md  CONTRIBUTING.md  FINAL_SUMMARY.md  GITHUB_ACTIONS_GUIDE.md  PineconeVectorDB.ipynb  README.md  benchmark-tools.csv  embedding_1.ipynb  main.py  openai-embeddings.ipynb  pyproject.toml  workspace_members_2026-02-03_22-49.csv
.github/workflows/: pylint.yml  python-tests.yml
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb  README.md
0-DataIngestParsing/data/structured_files/: inventory.xlsx
faiss_index/: index.pkl
langchainupdated/updatedlangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb
output/langchain/: chroma.sqlite3
output/steve_jobs_for_hyde.db/: chroma.sqlite3
